# bunny-c2

./: .gitignore  readme.md
client/rustimpl/: Cargo.toml
client/rustimpl/src/: basicinfo.rs  listdir.rs  main.rs  processCommand.rs  requests.rs  screencapture.rs  shell.rs  utils.rs
server/backend/: manage.py
server/backend/bunnybackend/: asgi.py  settings.py  urls.py  wsgi.py
server/backend/client/: admin.py  models.py  serializers.py  urls.py  views.py
server/backend/client/migrations/: 0001_initial.py  0002_command.py
server/frontend/bunny-frontend/: package-lock.json  package.json
server/frontend/bunny-frontend/src/: App.jsx
server/frontend/bunny-frontend/src/components/: ClientDetail.jsx  ClientLogs.jsx  ClientTab.jsx  CommandForm.jsx  CommandResponse.jsx  EditUsers.jsx  Layout.jsx  Loading.jsx  Login.jsx  Sidebar.jsx  UserFiles.jsx
server/frontend/bunny-frontend/src/hooks/: useFetch.jsx
server/frontend/bunny-frontend/src/pages/: Clients.jsx
