[package]
name = "rustimpl"
version = "0.1.0"
edition = "2024"

[dependencies]
whoami = "1.6"
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi", "winnt"] }
windows-sys = { version = "0.52", features = ["Win32_Security_Authorization"] }
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
base64 = "0.22"
screenshots = "0.8.10"